Added button .article-answer

--- a/artykul1.html
+++ b/artykul1.html
@@ -203,17 +203,27 @@
                     błyskawicznie!
                   </p>
                   <footer>
-                    <p>songoku z namek.com</p>
-                    <p>opublikowany: 18 godz. i 44 min temu</p>
+
                     <div class="article-comments-tags">
-                      <p>
-                        <img src="icons/icons8-comment-24(2).png" />
-                      </p>
-                      <p>164</p>
-                      <p style="font-weight: bold">&bull;</p>
                       <p>#nauka</p>
                       <p>#baterie</p>
                       <p>#ciekawostki</p>
+
+
+
+                    </div>
+                    <p>songoku z namek.com</p>
+                    <p>opublikowany: 18 godz. i 44 min temu</p>
+                    <div class="article-answer-section">
+                      <p>
+                        <img src="icons/icons8-comment-24(2).png"/>
+                      </p>
+                      <p>164</p>
+                      <button class="article-answer">
+                        <img src="icons/reply.png" alt="reply icon"   class="article-answer-icon">
+                        <p>Odpowiedz</p>
+                      </button>
+                      <img src="icons/share.png" alt="share icon" class="article-share-icon" >
                     </div>
                   </footer>
                 </section>
