--- a/artykul1.html
+++ b/artykul1.html
@@ -249,9 +249,9 @@
               </div>
               <div class="commentary-section-right">
                 <div class="article-likes">               
-                  <p class="article-likes-count">25</p>
-                  <button class="plus"></button>
-                  <div class="minus"></div></div>
+                  <p class="article-likes-count" id="article-likes-count">25</p>
+                  <button class="plus" id="plus-button"></button>
+                  <button class="minus" id="minus-button"></button></div>
               </div>
               <footer class="commentary-section-footer">
                 <div class="commentary-answer">
@@ -335,6 +335,7 @@
     <script src="slidebarButton.js"></script>
     <script src="slider.js"></script>
     <script src="likesCount.js"></script>
+    <script src="plusMinusCount.js"></script>
   </body>
 </html>
 
