feat: add character limit and counter to textarea

--- a/artykul1.html
+++ b/artykul1.html
@@ -336,7 +336,7 @@
       <div class="modal-content">
           <span id="close-button" class="close">&times;</span>
           <h2>Twoja odpowiedź</h2>
-          <textarea placeholder="Wpisz swoją odpowiedź..."></textarea>
+          <textarea placeholder="Wpisz swoją odpowiedź..." maxlength="200"></textarea>
           <button id="submit-button">Wyślij</button>
       </div>
   </div>
