--- a/artykul1.html
+++ b/artykul1.html
@@ -235,7 +235,7 @@
             <header class="commentary-header">
               <h2 class="commentary-header-text">KOMENTARZE (22)</h2>
             </header>
-            <section class="commentary-section">
+            <section class="commentary-section" id="commentary-section">
               <div class="commentary-section-left">
                 <div class="commentary-section-logo">
                   <img src="icons/avatar.png">
@@ -345,6 +345,7 @@
     <script src="likesCount.js"></script>
     <script src="plusMinusCount.js"></script>
     <script src="answer.js"></script>
+    <script src="newComment.js"></script>
   </body>
 </html>
 
