--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wykop clone by MacKry</title>
     <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="night.css" id="themeStylesheet" />
+    <link rel="stylesheet" href="day.css" id="themeStylesheet" />
     <link rel="stylesheet" href="slider.css" />
     <link rel="stylesheet" href="responsive.css" />
 
@@ -170,10 +170,10 @@
             </ul>
             <div class="night-mode">
               <label class="switch">
-                <input type="checkbox" id="toggleSwitch" />
+                <input type="checkbox" id="toggleSwitch" autocomplete="off"/>
                 <span class="slider"></span>
               </label>
-              <p class="night-mode-txt">Tryb nocny</p>
+              <p class="night-mode-txt" id="night-mode-txt">Tryb dzienny</p>
             </div>
           </div>
         </div>
