--- a/artykul1.html
+++ b/artykul1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wykop - klon by MacKry</title>
     <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="night.css" id="themeStylesheet" />
+    <link rel="stylesheet" href="day.css" id="themeStylesheet" />
     <link rel="stylesheet" href="slider.css" />
     <link rel="stylesheet" href="responsive.css" />
 
@@ -173,7 +173,7 @@
                 <input type="checkbox" id="toggleSwitch" />
                 <span class="slider"></span>
               </label>
-              <p class="night-mode-txt">Tryb nocny</p>
+              <p class="night-mode-txt" id="night-mode-txt">Tryb dzienny</p>
             </div>
           </div>
         </div>
