change alt for .search-icon

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <section class="search">
           <form id="form" class="form-container">
             <label class="form-search" for="form">
-              <img src="icons/lupa.png" alt="icon" class="search-icon" />
+              <img src="icons/lupa.png" alt="magnifier icon" class="search-icon" />
             </label>
             <input
               type="text"
