--- a/index.html
+++ b/index.html
@@ -68,10 +68,7 @@
     </header>
     <main>
       <aside class="slidebar-left" id="slidebar-left">
-        <div
-          class="slidebar-left-content-large"
-          id="slidebar-left-content-large"
-        >
+        <div class="slidebar-left-content-large" id="slidebar-left-content-large">
           <div class="slidebar-left-content-icons">
             <div id="slidebar-top-icons" class="slidebar-top-icons">
               <div class="fire-icon">
@@ -397,5 +394,7 @@
     <script src="slidebarButton.js"></script>
     <script src="slider.js"></script>
     <script src="likesCount.js"></script>
+    <script src="slidebar-left-position.js"></script>
+
   </body>
 </html>
