--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
       </div>
     </header>
     <main>
+      <div class="white-background" id="white-background"></div>
       <aside class="slidebar-left" id="slidebar-left">
         <div class="slidebar-left-content-large" id="slidebar-left-content-large">
           <div class="slidebar-left-content-icons">
