--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
         <section class="search">
           <form id="form" class="form-container">
             <label class="form-search" for="form">
-              <img src="icons/lupa.png" alt="magnifier icon" class="search-icon" />
+              <img
+                src="icons/lupa.png"
+                alt="magnifier icon"
+                class="search-icon"
+              />
             </label>
             <input
               type="text"
@@ -69,7 +73,10 @@
     <main>
       <div class="white-background" id="white-background"></div>
       <aside class="slidebar-left" id="slidebar-left">
-        <div class="slidebar-left-content-large" id="slidebar-left-content-large">
+        <div
+          class="slidebar-left-content-large"
+          id="slidebar-left-content-large"
+        >
           <div class="slidebar-left-content-icons">
             <div id="slidebar-top-icons" class="slidebar-top-icons">
               <div class="fire-icon">
@@ -168,7 +175,7 @@
             </ul>
             <div class="night-mode">
               <label class="switch">
-                <input type="checkbox" id="toggleSwitch" autocomplete="off"/>
+                <input type="checkbox" id="toggleSwitch" autocomplete="off" />
                 <span class="slider"></span>
               </label>
               <p class="night-mode-txt" id="night-mode-txt">Tryb dzienny</p>
@@ -179,7 +186,30 @@
           class="slidebar-left-content-small"
           id="slidebar-left-content-small"
         >
-          ddd
+          <ul class="slidebar-left-small-main-ul">
+            <li class="slidebar-left-small-li">
+              <a href="#"
+                ><img src="icons/house-svgrepo-com.svg" alt="house icon" />
+              </a>
+            </li>
+          </ul>
+          <ul class="slidebar-left-small-second-ul">
+            <li>
+              <a href="#"
+                ><img src="icons/bulb-2-svgrepo-com.svg " alt="bulb icon"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="icons/bulb-2-svgrepo-com.svg " alt="bulb icon"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="icons/bulb-2-svgrepo-com.svg " alt="bulb icon"
+              /></a>
+            </li>
+          </ul>
         </div>
       </aside>
       <div class="main-content">
@@ -396,6 +426,5 @@
     <script src="slider.js"></script>
     <script src="likesCount.js"></script>
     <script src="slidebar-left-position.js"></script>
-
   </body>
 </html>
