--- a/index.html
+++ b/index.html
@@ -200,14 +200,58 @@
               /></a>
             </li>
             <li>
-              <a href="#"
-                ><img src="icons/bulb-2-svgrepo-com.svg " alt="bulb icon"
-              /></a>
+              <a href="#">
+                <img src="icons/files-svgrepo-com.svg" alt="house icon" />
+              </a>
             </li>
             <li>
               <a href="#"
-                ><img src="icons/bulb-2-svgrepo-com.svg " alt="bulb icon"
+                ><img
+                  src="icons/electronic-controller-gamepad-svgrepo-com.svg "
+                  alt="gamepad icon"
               /></a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  src="icons/shirt-outline-svgrepo-com.svg"
+                  alt="shirt icon"
+                />
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  src="icons/steering-wheel-svgrepo-com.svg "
+                  alt="wheel icon"
+                />
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="icons/chip-svgrepo-com.svg " alt="chip icon" />
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="icons/rocket-svgrepo-com.svg " alt="rocket icon" />
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  src="icons/coins-dollar-money-currency-finance-payment-svgrepo-com.svg "
+                  alt="coins icon"
+                />
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  src="icons/suitcase-tag-svgrepo-com.svg"
+                  alt="suitcase icon"
+                />
+              </a>
             </li>
           </ul>
         </div>
