Change position .slidebar-left in articles

--- a/bateria.html
+++ b/bateria.html
@@ -44,7 +44,11 @@
         <section class="search">
           <form id="form" class="form-container">
             <label class="form-search" for="form">
-              <img src="icons/lupa.png" alt="icon" class="search-icon" />
+              <img
+                src="icons/lupa.png"
+                alt="magnifier icon"
+                class="search-icon"
+              />
             </label>
             <input
               type="text"
@@ -203,27 +207,31 @@
                     błyskawicznie!
                   </p>
                   <footer>
-
                     <div class="article-comments-tags">
                       <p>#nauka</p>
                       <p>#baterie</p>
                       <p>#ciekawostki</p>
-
-
-
                     </div>
                     <p>songoku z namek.com</p>
                     <p>opublikowany: 18 godz. i 44 min temu</p>
                     <div class="article-answer-section">
                       <p>
-                        <img src="icons/icons8-comment-24(2).png"/>
+                        <img src="icons/icons8-comment-24(2).png" />
                       </p>
                       <p>164</p>
                       <button class="article-answer">
-                        <img src="icons/reply.png" alt="reply icon"   class="article-answer-icon">
+                        <img
+                          src="icons/reply.png"
+                          alt="reply icon"
+                          class="article-answer-icon"
+                        />
                         <p id="answer-button">Odpowiedz</p>
                       </button>
-                      <img src="icons/share.png" alt="share icon" class="article-share-icon" >
+                      <img
+                        src="icons/share.png"
+                        alt="share icon"
+                        class="article-share-icon"
+                      />
                     </div>
                   </footer>
                 </section>
@@ -238,26 +246,29 @@
             <section class="commentary-section" id="commentary-section">
               <div class="commentary-section-left">
                 <div class="commentary-section-logo">
-                  <img src="icons/avatar.png">
+                  <img src="icons/avatar.png" />
                   <div class="user-info-container">
                     <div class="user-info">Matasek</div>
                     <time class="user-time">12:00</time>
                   </div>
-
                 </div>
-                <p class="commentary-section-text">Przykładowy komentarz do artykułu,Przykładowy komentarz do artykułu</p>
+                <p class="commentary-section-text">
+                  Przykładowy komentarz do artykułu,Przykładowy komentarz do
+                  artykułu
+                </p>
               </div>
               <div class="commentary-section-right">
-                <div class="article-likes">               
+                <div class="article-likes">
                   <p class="article-likes-count" id="article-likes-count">25</p>
                   <button class="plus" id="plus-button"></button>
-                  <button class="minus" id="minus-button"></button></div>
+                  <button class="minus" id="minus-button"></button>
+                </div>
               </div>
               <footer class="commentary-section-footer">
                 <div class="commentary-answer">
-                  <img src="icons/reply.png" alt="reply icon">
+                  <img src="icons/reply.png" alt="reply icon" />
                   <p>Odpowiedz</p>
-                  <img src="icons/share.png" alt="share icon">
+                  <img src="icons/share.png" alt="share icon" />
                 </div>
               </footer>
             </section>
@@ -334,18 +345,21 @@
     </main>
     <div id="modal" class="modal">
       <div class="modal-content">
-          <span id="close-button" class="close">&times;</span>
-          <h2>Twoja odpowiedź</h2>
-          <textarea placeholder="Wpisz swoją odpowiedź..." maxlength="200"></textarea>
-          <button id="submit-button">Wyślij</button>
+        <span id="close-button" class="close">&times;</span>
+        <h2>Twoja odpowiedź</h2>
+        <textarea
+          placeholder="Wpisz swoją odpowiedź..."
+          maxlength="200"
+        ></textarea>
+        <button id="submit-button">Wyślij</button>
       </div>
-  </div>
+    </div>
     <script src="slidebarButton.js"></script>
     <script src="slider.js"></script>
     <script src="likesCount.js"></script>
     <script src="plusMinusCount.js"></script>
     <script src="answer.js"></script>
     <script src="newComment.js"></script>
+    <script src="slidebar-left-position.js"></script>
   </body>
 </html>
-
