Change header button border color

--- a/bateria.html
+++ b/bateria.html
@@ -71,6 +71,7 @@
       </div>
     </header>
     <main>
+      <div class="white-background" id="white-background"></div>
       <aside class="slidebar-left" id="slidebar-left">
         <div
           class="slidebar-left-content-large"
