Added new arcticle

--- a/bateria.html
+++ b/bateria.html
@@ -175,7 +175,7 @@
             </ul>
             <div class="night-mode">
               <label class="switch">
-                <input type="checkbox" id="toggleSwitch" />
+                <input type="checkbox" id="toggleSwitch" autocomplete="off" />
                 <span class="slider"></span>
               </label>
               <p class="night-mode-txt" id="night-mode-txt">Tryb dzienny</p>
@@ -186,7 +186,74 @@
           class="slidebar-left-content-small"
           id="slidebar-left-content-small"
         >
-          ddd
+          <ul class="slidebar-left-small-main-ul">
+            <li class="slidebar-left-small-li">
+              <a href="#"
+                ><img src="icons/house-svgrepo-com.svg" alt="house icon" />
+              </a>
+            </li>
+          </ul>
+          <ul class="slidebar-left-small-second-ul">
+            <li>
+              <a href="#"
+                ><img src="icons/bulb-2-svgrepo-com.svg " alt="bulb icon"
+              /></a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="icons/files-svgrepo-com.svg" alt="house icon" />
+              </a>
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  src="icons/electronic-controller-gamepad-svgrepo-com.svg "
+                  alt="gamepad icon"
+              /></a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  src="icons/shirt-outline-svgrepo-com.svg"
+                  alt="shirt icon"
+                />
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  src="icons/steering-wheel-svgrepo-com.svg "
+                  alt="wheel icon"
+                />
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="icons/chip-svgrepo-com.svg " alt="chip icon" />
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="icons/rocket-svgrepo-com.svg " alt="rocket icon" />
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  src="icons/coins-dollar-money-currency-finance-payment-svgrepo-com.svg "
+                  alt="coins icon"
+                />
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  src="icons/suitcase-tag-svgrepo-com.svg"
+                  alt="suitcase icon"
+                />
+              </a>
+            </li>
+          </ul>
         </div>
       </aside>
       <div class="main-content">
@@ -254,8 +321,8 @@
                   </div>
                 </div>
                 <p class="commentary-section-text">
-                  Przykładowy komentarz do artykułu,Przykładowy komentarz do
-                  artykułu
+                  Spróbuj dodać swój komentarz klikając u góry "Odpowiedz".
+                  Komentarz pojawi się poniżej mojego wpisu.
                 </p>
               </div>
               <div class="commentary-section-right">
