Fix theme toggle switch functionality and script loading

--- a/polacy.html
+++ b/polacy.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wykop - klon by MacKry</title>
+    <script src="themeLocalStorage.js"></script>
     <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="day.css" id="themeStylesheet" />
     <link rel="stylesheet" href="slider.css" />
     <link rel="stylesheet" href="responsive.css" />
 
@@ -19,6 +19,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
+    <script src="slider.js" defer></script>
   </head>
   <body>
     <header class="header">
@@ -424,7 +425,6 @@
       </div>
     </div>
     <script src="slidebarButton.js"></script>
-    <script src="slider.js"></script>
     <script src="likesCount.js"></script>
     <script src="plusMinusCount.js"></script>
     <script src="answer.js"></script>
