--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wykop clone by MacKry</title>
+    <script src="themeLocalStorage.js"></script>
     <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="day.css" id="themeStylesheet" />
+
     <link rel="stylesheet" href="slider.css" />
     <link rel="stylesheet" href="responsive.css" />
 
@@ -19,6 +20,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
+    <script src="slider.js"></script>
   </head>
   <body>
     <header class="header">
@@ -468,9 +470,7 @@
         </div>
       </div>
     </main>
-
     <script src="slidebarButton.js"></script>
-    <script src="slider.js"></script>
     <script src="likesCount.js"></script>
     <script src="slidebar-left-position.js"></script>
   </body>
