Added link to index.html in header logo

--- a/bateria.html
+++ b/bateria.html
@@ -28,7 +28,13 @@
           <img src="icons/menu-svgrepo-com(1).svg" alt="menu-icon" />
         </button>
         <div class="header-logo">
-          <img src="icons/WykopLogo.png" alt="wykop logo" class="logo-wykop" />
+          <a href="index.html">
+            <img
+              src="icons/WykopLogo.png"
+              alt="wykop logo"
+              class="logo-wykop"
+            />
+          </a>
         </div>
         <nav class="main-menu">
           <ul class="main-menu-ul">
