--- a/bieda.html
+++ b/bieda.html
@@ -28,7 +28,13 @@
           <img src="icons/menu-svgrepo-com(1).svg" alt="menu-icon" />
         </button>
         <div class="header-logo">
-          <img src="icons/WykopLogo.png" alt="wykop logo" class="logo-wykop" />
+          <a href="index.html">
+            <img
+              src="icons/WykopLogo.png"
+              alt="wykop logo"
+              class="logo-wykop"
+            />
+          </a>
         </div>
         <nav class="main-menu">
           <ul class="main-menu-ul">
@@ -262,7 +268,7 @@
           <div class="articles-main">
             <section class="article-body">
               <aside class="article-left-aside">
-                <p class="like-count">125</p>
+                <p class="like-count">101</p>
                 <button class="like-button">WYKOP</button>
               </aside>
               <article class="article">
