Linked all articles in the HITS sectin

--- a/Ibisz.html
+++ b/Ibisz.html
@@ -274,21 +274,24 @@
               <article class="article">
                 <section class="article-text">
                   <header>
-                    <h1>Rewolucyjna bateria naładuje się w minutę!</h1>
+                    <h1>
+                      Krzysztof Ibisz zaprasza na swoją osiemnastkę w
+                      Bieszczadach.
+                    </h1>
                   </header>
                   <p>
-                    Wynaleziono nowy materiał do magazynowania energii
-                    elektrycznej. Przełomowe baterie będzie można ładować
-                    błyskawicznie!
+                    Pan Krzysztof postanowił zorganizować masową imprezę
+                    urodzinową. Zaproszeni są wszyscy chętni, którzy przybędą na
+                    miejsce. Przewiduje się wstępnie ponad 120 tys. gości.
                   </p>
                   <footer>
                     <div class="article-comments-tags">
-                      <p>#nauka</p>
-                      <p>#baterie</p>
-                      <p>#ciekawostki</p>
+                      <p>#gwiazdy</p>
+                      <p>#telewizja</p>
+                      <p>#imprezy</p>
                     </div>
-                    <p>songoku z namek.com</p>
-                    <p>opublikowany: 18 godz. i 44 min temu</p>
+                    <p>kokojambo z hawaje.oc</p>
+                    <p>opublikowany: 1 dzień temu</p>
                     <div class="article-answer-section">
                       <p>
                         <img src="icons/icons8-comment-24(2).png" />
