--- a/bialyLad.html
+++ b/bialyLad.html
@@ -268,32 +268,36 @@
           <div class="articles-main">
             <section class="article-body">
               <aside class="article-left-aside">
-                <p class="like-count">125</p>
+                <p class="like-count">1109</p>
                 <button class="like-button">WYKOP</button>
               </aside>
               <article class="article">
                 <section class="article-text">
                   <header>
-                    <h1>Rewolucyjna bateria naładuje się w minutę!</h1>
+                    <h1>
+                      Po wprowadzeniu białego ładu w sklepach zabrakło papieru
+                      toaletowego.
+                    </h1>
                   </header>
                   <p>
-                    Wynaleziono nowy materiał do magazynowania energii
-                    elektrycznej. Przełomowe baterie będzie można ładować
-                    błyskawicznie!
+                    W wyniku regulacji na rynku wyrobów papierniczych i
+                    pochodnych, w których obliczono zapotrzebowanie obywateli na
+                    te wyroby w sklepach zabrakło papieru toaletowego. "Ktoś się
+                    pomylił" - stwierdzł minister gospodarki.
                   </p>
                   <footer>
                     <div class="article-comments-tags">
-                      <p>#nauka</p>
-                      <p>#baterie</p>
-                      <p>#ciekawostki</p>
+                      <p>#gospodarka</p>
+                      <p>#polityka</p>
+                      <p>#ludzie</p>
                     </div>
-                    <p>songoku z namek.com</p>
-                    <p>opublikowany: 18 godz. i 44 min temu</p>
+                    <p>janusz z pracuj.max</p>
+                    <p>opublikowany: 5 dni temu</p>
                     <div class="article-answer-section">
                       <p>
                         <img src="icons/icons8-comment-24(2).png" />
                       </p>
-                      <p>164</p>
+                      <p>199</p>
                       <button class="article-answer">
                         <img
                           src="icons/reply.png"
@@ -311,7 +315,7 @@
                   </footer>
                 </section>
                 <figure class="article-photo">
-                  <img src="articles/battery.jpeg" alt="battery image" />
+                  <img src="articles/toiler-papier.jpg" alt="battery image" />
                 </figure>
               </article>
             </section>
