--- a/index.html
+++ b/index.html
@@ -417,13 +417,18 @@
             </header>
             <article class="article-right-body">
               <figure class="article-right-image">
-                <img src="articles/taxes.jpg" alt="article-image" />
+                <a href="likwidacjaVAT.html">
+                  <img src="articles/taxes.jpg" alt="article-image" />
+                </a>
               </figure>
               <section class="article-right-text">
-                <h1>
-                  Rząd Polski obniża tymczasowy VAT i likwiduje podatek
-                  dochodowy.
-                </h1>
+                <a href="likwidacjaVAT.html">
+                  <h1>
+                    Rząd Polski obniża tymczasowy VAT i likwiduje podatek
+                    dochodowy.
+                  </h1>
+                </a>
+
                 <footer>
                   <img src="icons/wykop.png" alt="w-icon" />
                   <p>1201</p>
@@ -432,13 +437,18 @@
             </article>
             <article class="article-right-body">
               <figure class="article-right-image">
-                <img src="articles/toiler-papier.jpg" alt="article-image" />
+                <a href="bialyLad.html">
+                  <img src="articles/toiler-papier.jpg" alt="article-image" />
+                </a>
               </figure>
               <section class="article-right-text">
-                <h1>
-                  Po wprowadzeniu białego ładu w sklepach zabrakło papieru
-                  toaletowego.
-                </h1>
+                <a href="bialyLad.html">
+                  <h1>
+                    Po wprowadzeniu białego ładu w sklepach zabrakło papieru
+                    toaletowego.
+                  </h1>
+                </a>
+
                 <footer>
                   <img src="icons/wykop.png" alt="w-icon" />
                   <p>1109</p>
@@ -447,15 +457,20 @@
             </article>
             <article class="article-right-body">
               <figure class="article-right-image">
-                <img
-                  src="articles/football-polish-reprezentation.jpg"
-                  alt="article-image"
-                />
+                <a href="reprezentacja.html">
+                  <img
+                    src="articles/football-polish-reprezentation.jpg"
+                    alt="article-image"
+                  />
+                </a>
               </figure>
               <section class="article-right-text">
-                <h1>
-                  Polska reprezentacja awansuje do finału mistrzostw świata!
-                </h1>
+                <a href="reprezentacja.html">
+                  <h1>
+                    Polska reprezentacja awansuje do finału mistrzostw świata!
+                  </h1>
+                </a>
+
                 <footer>
                   <img src="icons/wykop.png" alt="w-icon" />
                   <p>1043</p>
@@ -464,12 +479,18 @@
             </article>
             <article class="article-right-body">
               <figure class="article-right-image">
-                <img src="articles/18-birthday.jpg" alt="article-image" />
+                <a href="Ibisz.html">
+                  <img src="articles/18-birthday.jpg" alt="article-image" />
+                </a>
               </figure>
               <section class="article-right-text">
-                <h1>
-                  Krzysztof Ibisz zaprasza na swoją osiemnastkę w Bieszczadach.
-                </h1>
+                <a href="Ibisz.html">
+                  <h1>
+                    Krzysztof Ibisz zaprasza na swoją osiemnastkę w
+                    Bieszczadach.
+                  </h1>
+                </a>
+
                 <footer>
                   <img src="icons/wykop.png" alt="w-icon" />
                   <p>1186</p>
