--- a/likwidacjaVAT.html
+++ b/likwidacjaVAT.html
@@ -268,32 +268,33 @@
           <div class="articles-main">
             <section class="article-body">
               <aside class="article-left-aside">
-                <p class="like-count">125</p>
+                <p class="like-count">1201</p>
                 <button class="like-button">WYKOP</button>
               </aside>
               <article class="article">
                 <section class="article-text">
                   <header>
-                    <h1>Rewolucyjna bateria naładuje się w minutę!</h1>
+                    <h1>
+                      Rząd Polski obniża tymczasowy VAT i likwiduje podatek
+                      dochodowy.
+                    </h1>
                   </header>
                   <p>
-                    Wynaleziono nowy materiał do magazynowania energii
-                    elektrycznej. Przełomowe baterie będzie można ładować
-                    błyskawicznie!
+                    Przyjęto ustawę o powrocie stawki VAT z 23% na 22%. Niestety
+                    na chwilę obecną nie podano terminu wejścia ustawy w życie.
                   </p>
                   <footer>
                     <div class="article-comments-tags">
-                      <p>#nauka</p>
-                      <p>#baterie</p>
-                      <p>#ciekawostki</p>
+                      <p>#polityka</p>
+                      <p>#podatki</p>
                     </div>
-                    <p>songoku z namek.com</p>
-                    <p>opublikowany: 18 godz. i 44 min temu</p>
+                    <p>mario z kanal.org</p>
+                    <p>opublikowany: 7 dni temu</p>
                     <div class="article-answer-section">
                       <p>
                         <img src="icons/icons8-comment-24(2).png" />
                       </p>
-                      <p>164</p>
+                      <p>205</p>
                       <button class="article-answer">
                         <img
                           src="icons/reply.png"
@@ -311,7 +312,7 @@
                   </footer>
                 </section>
                 <figure class="article-photo">
-                  <img src="articles/battery.jpeg" alt="battery image" />
+                  <img src="articles/taxes.jpg" alt="battery image" />
                 </figure>
               </article>
             </section>
