--- a/reprezentacja.html
+++ b/reprezentacja.html
@@ -268,18 +268,20 @@
           <div class="articles-main">
             <section class="article-body">
               <aside class="article-left-aside">
-                <p class="like-count">125</p>
+                <p class="like-count">1043</p>
                 <button class="like-button">WYKOP</button>
               </aside>
               <article class="article">
                 <section class="article-text">
                   <header>
-                    <h1>Rewolucyjna bateria naładuje się w minutę!</h1>
+                    <h1>
+                      Polska reprezentacja awansuje do finału mistrzostw świata!
+                    </h1>
                   </header>
                   <p>
-                    Wynaleziono nowy materiał do magazynowania energii
-                    elektrycznej. Przełomowe baterie będzie można ładować
-                    błyskawicznie!
+                    W końcu! Po wspaniałym meczu z Brazylią wygranym 5:4, Polska
+                    awansowała do finału MŚ, gdzie czeka już reprezentacja
+                    Niemiec.
                   </p>
                   <footer>
                     <div class="article-comments-tags">
@@ -287,13 +289,13 @@
                       <p>#baterie</p>
                       <p>#ciekawostki</p>
                     </div>
-                    <p>songoku z namek.com</p>
-                    <p>opublikowany: 18 godz. i 44 min temu</p>
+                    <p>tsubasa z nankatsu.jp</p>
+                    <p>opublikowany: 4 dni temu</p>
                     <div class="article-answer-section">
                       <p>
                         <img src="icons/icons8-comment-24(2).png" />
                       </p>
-                      <p>164</p>
+                      <p>187</p>
                       <button class="article-answer">
                         <img
                           src="icons/reply.png"
@@ -311,7 +313,10 @@
                   </footer>
                 </section>
                 <figure class="article-photo">
-                  <img src="articles/battery.jpeg" alt="battery image" />
+                  <img
+                    src="articles/football-polish-reprezentation.jpg"
+                    alt="battery image"
+                  />
                 </figure>
               </article>
             </section>
